// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label component Accepts custom styles 1`] = `
<label>
  <span
    className="test-class"
  >
    button
  </span>
</label>
`;

exports[`Label component Matches snapshot 1`] = `
<label>
  <span>
    Test Label
  </span>
</label>
`;

exports[`Label component Renders required props 1`] = `
Array [
  <div>
    Child
  </div>,
  ";",
]
`;
